# slide-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
examples/: create_sample_template.py  fill_performance_template.py  quarterly_report.json
slide_generator/: __init__.py  cli.py  generator.py  table_filler.py
templates/: quarterly_report_template.pptx
tests/: test_generator.py
